--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Trabalho 2</title>
+    <title>Atividade 2</title>
 </head>
 <body>
     <div>
-        <h1>Trabalho 2 Linguagens e Paradigmas</h1>
+        <h1>Atividade 2 Sistemas Distribuidos</h1>
         <h2>Calculadora - Conversão de Moedas</h2>
 
         <label for="valor">Valor:</label>
